--- a/styles/home.scss
+++ b/styles/home.scss
@@ -53,10 +53,15 @@ h1 {
     }
 
     .message-content,
-    .message-username {
+    .message-username,
+    .message-time {
       overflow: hidden;
       margin: 5px;
       padding: 0 10px;
+    }
+
+    .message-time {
+      flex: 3;
     }
 
     .message-content {
