--- a/styles/home.scss
+++ b/styles/home.scss
@@ -98,5 +98,10 @@ h1 {
 
   
   .navbar-usercount {
+    padding: 1em;
+    border: 1px solid black;
+    margin-top: .5em;
+    background-color: white;
+    font-weight: 700;
     float: right;
   }
