--- a/styles/home.scss
+++ b/styles/home.scss
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700");
     @import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css");
+    // @import './node_modules/emoji-picker-react/dist/universal/style.scss';
 
 h1 {
   color: tomato;
@@ -61,16 +62,26 @@ h1 {
     }
 
     .message-time {
-      flex: 3;
+      flex: 2;
+      text-align: right;
     }
 
     .message-content {
       flex: 8;
+      word-wrap: break-word;
     }
 
     .message-username {
       flex: 2;
       font-weight: 700;
+    }
+
+    .message-image {
+      // flex: 6;
+      // display: block;
+      // margin-left: auto;
+      // margin-right: auto;
+      max-width: 60%;
     }
 
     .navbar {
@@ -105,3 +116,8 @@ h1 {
     font-weight: 700;
     float: right;
   }
+
+    // $size_: 20px;
+    // $width_picker: 300px;
+    // $height_picker: 75px;
+    // $bg_picker: #f1f1f1;
